# coding_challenges

./: .env.dev  .env.preproduction  .env.production  .env.staging  .gitignore  .prettierignore  Cargo.toml  README.md  approve.mjs  b.html  bank_data.js  build.zig  bun.lockb  code_approvers.json  create_new_module.js  delete.save  dq.sql  go.mod  go.sum  hacker_rank.drawio  i.py  index.js  package.json  pubspec.yaml  steve.js  sturgesRule.js  tsconfig.json  vitest.config.ts
.github/: labels.yml
accounting/: SalesReceipt.js  db.sqlite3  package.json  server.js
android/: pom.xml
example/: README.md  bun.lockb  coding_challenges_example.dart  package.json
js/: FILESTRUCTURE.md  Probability.js  StemAndLeaf.js
moderator_bot/: Cargo.toml
moderator_bot/src/: dummy.toml  worker.rs
my-app/: pom.xml
pyPie/: parking_system.py
rust/: .rustfmt.toml  Cargo.toml
rust/src/: addition.rs  adjacent_elements_product.rs  alphabet_soup.rs  calculate_fuel.rs  century_from_year.rs  check_palindrome.rs  convert_age_to_days.rs  convert_boolean_to_string.rs  convert_days_to_age.rs  convert_minutes_to_seconds.rs  count_matches.rs  count_true.rs  create_target_array.rs  cubes.rs  fizz_buzz.rs  is_anagram.rs  is_rep_digit.rs  is_same_number.rs  less_than_100.rs  linear_search.rs  main.rs  make_pair.rs  maximum_wealth.rs  missing_number.rs  name_string.rs  next_integer.rs  reduce_array.rs
rust/src/moderator_bot/: dummy.toml  main.rs
shell_bash/: add.sh  add.sh_DIRECTIONS.html  leet_code_problem_193.sh  leet_code_problem_195.sh  loop.sh_DIRECTIONS.html
src/: calculator.js  (+8 more)
(+449 files in other folders)
