[package]
name = "moderator_bot"
version = "0.1.0"
authors = ["stephen smith <wearypossum4770@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0"
