[package]
name = "rust"
version = "0.1.0"
authors = ["wearypossum4770 <wearypossum4770@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jemallocator = "0.3.2"
num-traits = "0.2"
itertools = "0.10.0"
ferris-says = "0.2"
regex = "1"
cargo-eval = "0.1.0"
wasm-bindgen = "=0.2.61"
nodejs-helper = "0.0.3"
eval = "0.4.3"
